# ml-minesweeper

./: CMakeLists.txt  Todo.txt  main.py  module.cpp  readme.md  setup.py
minesweeper/: board.py
minesweeper-install/: __init__.py  test.py
ml/: ML.py  visualization.py
